# test-llama3-from-scratch

./: llama3-from-scratch.ipynb  pyproject.toml
src/test_llama3_from_scratch/: __init__.py
